[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "urllib3-secure-extra"
description = "Marker library to detect whether urllib3 was installed with the deprecated [secure] extra"
readme = "README.md"
authors = [
  {name = "Seth Michael Larson", email="sethmichaellarson@gmail.com"}
]
maintainers = [
  {name = "Seth Michael Larson", email="sethmichaellarson@gmail.com"},
  {name = "Quentin Pradet", email="quentin@pradet.me"},
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries",
]
dynamic = ["version"]

[project.urls]
"Source Code" = "https://github.com/urllib3/urllib3-secure-extra"
"homepage" = "https://github.com/urllib3/urllib3/issues/2680"

[tool.flit.module]
name = "urllib3_secure_extra"

